[project]
name = "ConnectKit-S3"
version = "1.3.1"
description = "Wrapper for connection to S3"
authors = [
    { name = "RealMetamorph", email = "andr.timchuk@yandex.ru" },
]
keywords = ["connectkit", "s3", "boto3", "async", "asyncio", "aioboto3", "aiofiles"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.34",
]

[project.urls]
Homepage = "https://github.com/mtuciru/ConnectKit-S3"
Repository = "https://github.com/mtuciru/ConnectKit-S3.git"


[project.optional-dependencies]
async = [
    "aiofiles>=23.2.1",
    "aiobotocore>=2.11.2",
    "async-lru>=2.0.4",
    "aioboto3>=13.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
tests = "echo 'tests will be here'"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "types-aiobotocore[s3]>=2.11.2",
]
